change align-items in centre-container class to flex-start, remove word-break: bottom for h1, h2, h3, h4, h5 and h6 to try to fix titles on human articles

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -38,7 +38,7 @@ html {
   /* sits within container */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 
   margin-top: 32px;
   margin-bottom: 32px;
@@ -122,7 +122,6 @@ h6 {
   margin-right: 12px;
   padding: 0px;
   gap: 0px;
-  word-break: bottom;
   font-family: Poppins, sans-serif;
 }
 h1 {
